programming news section css+html

--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@ Praesent tellus lorem, venenatis fringilla facilisis sit amet, tempor eu augue. 
         </section>  
 
         <section class="sec__category">
-            <h3></h3>
+            
             <div class="container">
                 <div class="category__header wrapper__title mb-5">
                     <h1>Section Product Category</h1>
@@ -643,7 +643,100 @@ Praesent tellus lorem, venenatis fringilla facilisis sit amet, tempor eu augue. 
         </section>  
 
         <section class="sec__news">
-            <h3>Section News</h3>
+            
+            <div class="container">
+                <div class="news__header wrapper__title mb-5">
+                    <h1>Section News</h1>
+                    <div class="divider"></div>
+                </div>
+
+                <div class="news__list row">
+
+                    <article class="news__unity col-lg-4 col-sm-6">
+                        <div class="news__card">              
+                            <a href="#" class="news__img d-flex align-items-end" style="background-image: url('img/slider-1.jpg');">
+                                <div class="news__date text-center p-2">
+                                <span class="day">25</span>
+                                <span class="mos">jan</span>
+                                <span class="yr">2023</span>
+                                </div>
+                            </a>
+                            <div class="news__content bg-white">
+                                <h2 class="news__title">
+                                    <a href="#">
+                                        Lorem ipsum dolor sit amet
+                                    </a>
+                                </h2>
+                                <div class="news__info">
+                                    <p>
+                                    consectetur adipiscing elit. Vivamus in viverra dolor, 
+                                    eget accumsan massa. Nulla scelerisque dignissim fringilla. 
+                                    Etiam sodales lacinia mi...
+                                    </p>	
+                                </div>			                
+                            </div><!-- news__contento -->
+                        </div><!-- news__card -->                        
+                    </article>
+
+                    <article class="news__unity col-lg-4 col-sm-6">
+                        <div class="news__card">              
+                            <a href="#" class="news__img d-flex align-items-end" style="background-image: url('img/slider-2.jpg');">
+                                <div class="news__date text-center p-2">
+                                <span class="day">24</span>
+                                <span class="mos">jan</span>
+                                <span class="yr">2023</span>
+                                </div>
+                            </a>
+                            <div class="news__content bg-white">
+                                <h2 class="news__title">
+                                    <a href="#">
+                                        Lorem ipsum dolor sit amet
+                                    </a>
+                                </h2>
+                                <div class="news__info">
+                                    <p>
+                                    consectetur adipiscing elit. Vivamus in viverra dolor, 
+                                    eget accumsan massa. Nulla scelerisque dignissim fringilla. 
+                                    Etiam sodales lacinia mi...
+                                    </p>	
+                                </div>			                
+                            </div><!-- news__contento -->
+                        </div><!-- news__card -->                        
+                    </article>
+
+                    <article class="news__unity col-lg-4 col-sm-6">
+                        <div class="news__card">              
+                            <a href="#" class="news__img d-flex align-items-end" style="background-image: url('img/slider-3.jpg');">
+                                <div class="news__date text-center p-2">
+                                <span class="day">23</span>
+                                <span class="mos">jan</span>
+                                <span class="yr">2023</span>
+                                </div>
+                            </a>
+                            <div class="news__content bg-white">
+                                <h2 class="news__title">
+                                    <a href="#">
+                                        Lorem ipsum dolor sit amet
+                                    </a>
+                                </h2>
+                                <div class="news__info">
+                                    <p>
+                                    consectetur adipiscing elit. Vivamus in viverra dolor, 
+                                    eget accumsan massa. Nulla scelerisque dignissim fringilla. 
+                                    Etiam sodales lacinia mi...
+                                    </p>	
+                                </div>			                
+                            </div><!-- news__contento -->
+                        </div><!-- news__card -->                        
+                    </article>
+
+                </div><!-- row -->
+
+                <div class="news__footer text-center">                    
+                    <a href="" class="btn btn-outline-primary">See more news <i class="bi bi-chevron-double-right"></i></a>                    
+                </div>
+
+            </div><!-- container -->
         </section>  
 
         <section class="sec__customer">
