--- a/index.html
+++ b/index.html
@@ -942,16 +942,15 @@ Praesent tellus lorem, venenatis fringilla facilisis sit amet, tempor eu augue. 
                             <li class="testimony__unity slide-visible">
                                 <div class="card rounded-0 h-100">
                                     <div class="row g-0 h-100">
-                                        <div class="col-md-3 col-xl-3">
-                                            <img src="img/testimony/img-1.jpg" class="card-img d-none d-md-block" loading="lazy" style="height: 100%; object-fit: cover" alt="...">
-                                            <img src="img/testimony/img-1.jpg" class="card-img d-block d-md-none" loading="lazy" style="width: 100%; object-fit: cover" alt="...">
+                                        <div class="col-md-3 col-xl-3">                                            
+                                            <img src="img/testimony/img-testimony-1.webp" class="card-img d-none d-md-block" loading="lazy" style="height: 100%; object-fit: cover" alt="...">
+                                            <img src="img/testimony/img-testimony-1.webp" class="card-img d-block d-md-none" loading="lazy" style="width: 100%; object-fit: cover" alt="...">
                                         </div>
                                         <div class="col-md-9 col-xl-9 d-flex align-items-center p-2 p-md-3 p-xl-5">
                                             <div class="card-body p-1 p-md-3 p-xl-9">
-                                                <p class="lead">Dreaming about cars</p>
-                                                <h2 class="card-title" style="color:#DF1E1E;">Vintage cars from another era</h2>
-                                                <p class="card-text mt-3">First, there’s the design of the car itself. Classic cars were created very much in an analogue world where designers used pencil and paper to create elegant shapes and flowing lines that would just not be possible
-                                                    on the computer-based design software used by modern car designers.</p>
+                                                <p class="lead">Sara</p>
+                                                <h2 class="card-title" style="color:#1e75df;">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h2>
+                                                <p class="card-text mt-3">Duis sed blandit urna, ut gravida ex. Mauris varius lorem a ullamcorper laoreet. Nullam ex lorem, luctus vitae nisl vel, tincidunt faucibus metus.</p>
                                                 <p class="card-text"><small class="text-muted">Handcrafted like good code</small></p>
                                             </div>
                                         </div>
@@ -963,15 +962,14 @@ Praesent tellus lorem, venenatis fringilla facilisis sit amet, tempor eu augue. 
                                 <div class="card rounded-0 h-100">
                                     <div class="row g-0 h-100">
                                         <div class="col-md-3 col-xl-3">
-                                            <img src="img/testimony/img-1.jpg" class="card-img d-none d-md-block" loading="lazy" style="height: 100%; object-fit: cover" alt="...">
-                                            <img src="img/testimony/img-1.jpg" class="card-img d-block d-md-none" loading="lazy" style="width: 100%; object-fit: cover" alt="...">
+                                            <img src="img/testimony/lupita-nyongo.webp" class="card-img d-none d-md-block" loading="lazy" style="height: 100%; object-fit: cover" alt="...">
+                                            <img src="img/testimony/lupita-nyongo.webp" class="card-img d-block d-md-none" loading="lazy" style="width: 100%; object-fit: cover" alt="...">
                                         </div>
                                         <div class="col-md-9 col-xl-9 d-flex align-items-center p-2 p-md-3 p-xl-5">
                                             <div class="card-body p-1 p-md-3 p-xl-9">
-                                                <p class="lead">Dreaming about cars</p>
-                                                <h2 class="card-title" style="color:#DF1E1E;">Vintage cars from another era</h2>
-                                                <p class="card-text mt-3">First, there’s the design of the car itself. Classic cars were created very much in an analogue world where designers used pencil and paper to create elegant shapes and flowing lines that would just not be possible
-                                                    on the computer-based design software used by modern car designers.</p>
+                                                <p class="lead">Lupita</p>
+                                                <h2 class="card-title" style="color:#1e75df;">Fusce quam justo, rutrum in pretium nec, tempus ac leo</h2>
+                                                <p class="card-text mt-3">Morbi blandit aliquam nibh id mattis. Nam tincidunt elementum diam, vitae porta purus ullamcorper non. Etiam et magna id urna pellentesque rutrum. Donec ac quam aliquam, vehicula dolor non, volutpat mauris. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                                                 <p class="card-text"><small class="text-muted">Handcrafted like good code</small></p>
                                             </div>
                                         </div>
@@ -979,26 +977,6 @@ Praesent tellus lorem, venenatis fringilla facilisis sit amet, tempor eu augue. 
                                 </div>
                             </li>
 
-                            <li class="slide-visible">
-                                <div class="card rounded-0 h-100">
-                                    <div class="row g-0 h-100">
-                                        <div class="col-md-3 col-xl-3">
-                                            <img src="img/testimony/img-1.jpg" class="card-img d-none d-md-block" loading="lazy" style="height: 100%; object-fit: cover" alt="...">
-                                            <img src="img/testimony/img-1.jpg" class="card-img d-block d-md-none" loading="lazy" style="width: 100%; object-fit: cover" alt="...">
-                                        </div>
-                                        <div class="col-md-9 col-xl-9 d-flex align-items-center p-2 p-md-3 p-xl-5">
-                                            <div class="card-body p-1 p-md-3 p-xl-9">
-                                                <p class="lead">Dreaming about cars</p>
-                                                <h2 class="card-title" style="color:#DF1E1E;">Vintage cars from another era</h2>
-                                                <p class="card-text mt-3">First, there’s the design of the car itself. Classic cars were created very much in an analogue world where designers used pencil and paper to create elegant shapes and flowing lines that would just not be possible
-                                                    on the computer-based design software used by modern car designers.</p>
-                                                <p class="card-text"><small class="text-muted">Handcrafted like good code</small></p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </li>
-                           
                         </ul>
                     
                         <button type="button" class="slider-nav" aria-label="Go left"></button>
